--- a/index.html
+++ b/index.html
@@ -459,20 +459,20 @@
               anytime. And the first meal is on us!
             </p>
 
-            <form action="#" class="cta-form">
+            <form class="cta-form" name="sign-up" netlify>
               <div>
                 <label for="full-name">Full Name</label>
-                <input id="full-name" type="text" placeholder="John Smith" required />
+                <input id="full-name" type="text" placeholder="John Smith" name="full-name" required />
               </div>
 
               <div>
                 <label for="email">Email Address</label>
-                <input id="email" type="email" placeholder="JohnSmith@protonmail.com" required />
+                <input id="email" type="email" name="email" placeholder="JohnSmith@protonmail.com" required />
               </div>
 
               <div>
                 <label for="select-where">Where did you hear about us?</label>
-                <select name="" id="select-where" required>
+                <select name="select-where" id="select-where" required>
                   <option value="">Please choose one option:</option>
                   <option value="friends">Friends</option>
                   <option value="family">Family</option>
